Fri Sep 17 13:19:05 2004  Chad Elliott  <elliott_c@ociweb.com>

        * tests/Dirent_Test.cpp:
        * tests/Message_Queue_Test_Ex.cpp:

          Corrected minor build problems for VxWorks.

Fri Sep 17 11:53:10 2004  Chad Elliott  <elliott_c@ociweb.com>

        * ace/ACE.cpp:

          Return the system variable, maxFiles, in ACE::max_handles()
          instead of the FD_SETSIZE which does not reflect the actual limit.

        * ace/Capabilities.cpp:

          Template instantiations for the ACE_Hash<ACE_TString> and
          ACE_Equal_To<ACE_TString> were conflicting with template
          specialization of the same on VxWorks.  I'm not sure if they are
          required for any compiler, but I wanted to be safe and exclude
          them in a #if !defined (VXWORKS).

        * ace/Proactor.cpp:

          Moved the template instantiations for
          auto_ptr<ACE_Asynch_Result_Impl> and
          auto_ptr<ACE_Asynch_Result_Impl> into the right #if clause.

        * ace/config-vxworks5.x.h:

          The current GNU compiler for VxWorks (2.96) is the only old
          compiler that could possible build ACE and it supports template
          specialization, lacks auto_ptr and has various other platform
          differences.

        * ace/os_include/os_limits.h:

          Define MAXSYMLINKS if it isn't defined by the system headers.
          I chose 20 which is what I found in other system header files.

        * ace/os_include/sys/os_stat.h:

          Define S_ISLNK if it isn't defined by the system headers.

Fri Sep 17 12:09:27 2004  Steve Huston  <shuston@riverace.com>

        * examples/ASX/CCM_App/CCM_App.cpp:
        * examples/ASX/CCM_App/SC_Server.cpp:
        * examples/ASX/Event_Server/Event_Server/event_server.cpp:
        * examples/ASX/Event_Server/Event_Server/Options.{h cpp}:
        * examples/ASX/Event_Server/Event_Server/Supplier_Router.{h cpp}:
        * examples/ASX/Event_Server/Event_Server/Event_Analyzer.{h cpp}: